==> maurocarlier/Game-Tech/IR-Transmitter/x-cube-irremote/Projects/Common_IR/src/sirc_decode.c <==
#include "main.h"
#define SIRC_TIME_OUT_US                ((uint32_t)4050)
#define SIRC_STATUS_HEADER              ((uint8_t)(1 << 1))
#define SIRC_STATUS_RX                  ((uint8_t)(1 << 0))
#define INITIAL_STATUS                  SIRC_STATUS_HEADER
#define SIRC_BIT_ERROR                  ((uint8_t)0xFF)
#define SIRC_HEADER_ERROR               ((uint8_t)0xFF)
#define SIRC_HEADER_OK                  ((uint8_t)0x00)
#define SIRC_BITS_COUNT                 ((uint8_t)11)
#define SIRC_TOTAL_BITS_COUNT           ((uint8_t)11)
#define SIRC_ONTIME_MIN_US              ((uint32_t)(600 - 60))
#define SIRC_ONTIME_MAX_US              ((uint32_t)(1200 + 60))
#define SIRC_HEADER_LOW_MIN_US          ((uint32_t)(2400 - 150))
#define SIRC_HEADER_LOW_MAX_US          ((uint32_t)(2400 + 150))
#define SIRC_HEADER_WHOLE_MIN_US        ((uint32_t)(2400 + 600 - 60))
#define SIRC_HEADER_WHOLE_MAX_US        ((uint32_t)(2400 + 600 + 60))
#define SIRC_VALUE_STEP_US              ((uint32_t)600)
#define SIRC_VALUE_MARGIN_US            ((uint32_t)100)
#define SIRC_VALUE_00_US                ((uint32_t)1200)

void Menu_SIRCDecode_Func(void)
{
  while (Menu_ReadKey() != NOKEY)
  {}
  /* Clear the LCD */
  BSP_LCD_Clear(LCD_COLOR_WHITE);

  BSP_LCD_SetFont(&Font24);
  /* Set the LCD Back Color */
  BSP_LCD_SetBackColor(LCD_COLOR_BLUE);
  /* Set the LCD Text Color */
  BSP_LCD_SetTextColor(LCD_COLOR_WHITE);
  BSP_LCD_DisplayStringAtLine(0, (uint8_t*)"   SIRC Receiver  ");
  BSP_LCD_DisplayStringAtLine(9, (uint8_t*)"To exit press KEY ");

  /* Set the LCD Back Color */
  BSP_LCD_SetBackColor(LCD_COLOR_WHITE);
  /* Set the LCD Text Color */
  BSP_LCD_SetTextColor(LCD_COLOR_BLACK);
  /* Initialize the InfraRed application: SIRC */
  RFDemoStatus = SIRC_DEC;
  SIRC_Init();

  while (Menu_ReadKey() != KEY)
  {
    /* SIRC frame decode */
    SIRC_Decode(&SIRC_Frame);
  }

  /* Clear LCD */
  BSP_LCD_Clear(LCD_COLOR_WHITE);

  /* Exit the SIRC demo */
  RFDemoStatus = NONE;
  SIRC_DeInit();

  /* Enable the JoyStick interrupt */
  HAL_NVIC_EnableIRQ(LEFT_JOY_EXTI_IRQn);

  /* Display menu */
  Menu_DisplayMenu();
}

void SIRC_DeInit(void)
{
  HAL_TIM_IC_DeInit(&TimHandleDEC);
  HAL_GPIO_DeInit(IR_GPIO_PORT, IR_GPIO_PIN);
}

void SIRC_Init(void)
{
  GPIO_InitTypeDef gpio_init_struct;
  TIM_IC_InitTypeDef tim_ic_init;
  TIM_SlaveConfigTypeDef tim_slave_conf;
  TIM_MasterConfigTypeDef tim_master_conf;

  /*  Clock Configuration for TIMER */
  IR_TIM_CLK();

  /* Enable Button GPIO clock */
  IR_GPIO_PORT_CLK();

  /* Pin configuration: input floating */
  gpio_init_struct.Pin = IR_GPIO_PIN;
  gpio_init_struct.Mode = GPIO_MODE_AF_OD;
  gpio_init_struct.Pull = GPIO_NOPULL;
  gpio_init_struct.Speed = GPIO_SPEED_FREQ_HIGH;
  gpio_init_struct.Alternate = IR_GPIO_AF_REC;
  HAL_GPIO_Init(IR_GPIO_PORT, &gpio_init_struct);

  /* Enable the TIMx global Interrupt */
  HAL_NVIC_SetPriority(IR_TIM_IRQn, 0, 1);
  HAL_NVIC_EnableIRQ(IR_TIM_IRQn);

  /* Timer Clock */
  TIMCLKValueKHz = TIM_GetCounterCLKValue() / 1000;
  IRTimeOut = TIMCLKValueKHz * SIRC_TIME_OUT_US / 1000;

  TimHandleDEC.Instance = IR_TIM;
  TimHandleDEC.Init.ClockDivision = 0;
  TimHandleDEC.Init.CounterMode = 0;
  TimHandleDEC.Init.Period = IRTimeOut;
  TimHandleDEC.Init.Prescaler = TIM_PRESCALER;
  TimHandleDEC.Init.RepetitionCounter = 0;
  HAL_TIM_IC_Init(&TimHandleDEC);

  /* TIM configuration */
  tim_ic_init.ICPolarity = TIM_ICPOLARITY_RISING;
  tim_ic_init.ICSelection = TIM_ICSELECTION_INDIRECTTI;
  tim_ic_init.ICPrescaler = TIM_ICPSC_DIV1;
  tim_ic_init.ICFilter = 0x0;
  HAL_TIM_IC_ConfigChannel(&TimHandleDEC, &tim_ic_init, IR_TIM_DEC_CHANNEL_B);
  tim_ic_init.ICPolarity = TIM_ICPOLARITY_FALLING;
  tim_ic_init.ICSelection = TIM_ICSELECTION_DIRECTTI;
  HAL_TIM_IC_ConfigChannel(&TimHandleDEC, &tim_ic_init, IR_TIM_DEC_CHANNEL_A);

  tim_slave_conf.InputTrigger = IR_TIM_DEC_TRIGGER;
  tim_slave_conf.SlaveMode = TIM_SLAVEMODE_RESET;
  tim_slave_conf.TriggerPolarity = TIM_TRIGGERPOLARITY_FALLING;
  tim_slave_conf.TriggerFilter = 0;
  HAL_TIM_SlaveConfigSynchro( &TimHandleDEC, &tim_slave_conf);

  /* Enable the Master/Slave Mode */
  tim_master_conf.MasterSlaveMode = TIM_SMCR_MSM;
  tim_master_conf.MasterOutputTrigger = 0;
#ifdef USE_STM32303C_EVAL
  tim_master_conf.MasterOutputTrigger2 = 0;
#endif
  HAL_TIMEx_MasterConfigSynchronization( &TimHandleDEC, &tim_master_conf);

  /* Configures the TIM Update Request Interrupt source: counter overflow */
  __HAL_TIM_URS_ENABLE(&TimHandleDEC);

  /* Clear update flag */
  __HAL_TIM_CLEAR_FLAG( &TimHandleDEC, TIM_FLAG_UPDATE);

  /* Enable TIM Update Event Interrupt Request */
  /* Enable the CC2/CC1 Interrupt Request */
  __HAL_TIM_ENABLE_IT( &TimHandleDEC, TIM_FLAG_UPDATE | TIM_IT_CC1 | TIM_IT_CC2);

  /* Enable the timer */
  __HAL_TIM_ENABLE(&TimHandleDEC);

  if (HAL_TIM_IC_Start_IT(&TimHandleDEC, IR_TIM_DEC_CHANNEL_A) != HAL_OK)
  {
    /* Starting Error */
    while (1)
    {}
  }

  if (HAL_TIM_IC_Start_IT(&TimHandleDEC, IR_TIM_DEC_CHANNEL_B) != HAL_OK)
  {
    /* Starting Error */
    while (1)
    {}
  }

  /* Header */
  IRHeaderLowMin = TIMCLKValueKHz * SIRC_HEADER_LOW_MIN_US / 1000;
  IRHeaderLowMax = TIMCLKValueKHz * SIRC_HEADER_LOW_MAX_US / 1000;
  IRHeaderWholeMin = TIMCLKValueKHz * SIRC_HEADER_WHOLE_MIN_US / 1000;
  IRHeaderWholeMax = TIMCLKValueKHz * SIRC_HEADER_WHOLE_MAX_US / 1000;

  /* Bit time range*/
  IROnTimeMax = TIMCLKValueKHz * SIRC_ONTIME_MAX_US / 1000;
  IROnTimeMin = TIMCLKValueKHz * SIRC_ONTIME_MIN_US / 1000;
  IRValueStep = TIMCLKValueKHz * SIRC_VALUE_STEP_US / 1000;
  IRValueMargin = TIMCLKValueKHz * SIRC_VALUE_MARGIN_US / 1000;
  IRValue00 = TIMCLKValueKHz * SIRC_VALUE_00_US / 1000;

  /* Default state */
  SIRC_ResetPacket();
}

void SIRC_Decode(SIRC_Frame_t *pIRFrame)
{
  uint32_t irframedata = 0;

  if (IRFrameReceived != NO)
  {
    /* Disable IR_TIM */
    __HAL_TIM_DISABLE(&TimHandleDEC);

    /* Extract address and command from the received bit sequence */
    irframedata = SIRC_ReverseBit(IRTmpPacket.data);
    pIRFrame->Command = (irframedata >> 20) & 0x7F;
    pIRFrame->Address = (irframedata >> 27) & 0x1F;

    /* Default state */
    IRFrameReceived = NO;
    SIRC_ResetPacket();

    /* Display command and address */
    BSP_LCD_SetFont(&Font20);
    BSP_LCD_DisplayStringAtLine(6, (uint8_t*)aSIRCCommands[pIRFrame->Command]);
    BSP_LCD_DisplayStringAtLine(7, (uint8_t*)aSIRCDevices[pIRFrame->Address]);
    BSP_LCD_SetFont(&Font24);

    /* Enable IR_TIM */
    __HAL_TIM_ENABLE(&TimHandleDEC);
  }
}
